ajuste validação de compensação de contas

--- a/customertitles_004/webapp/view/Main.view.xml
+++ b/customertitles_004/webapp/view/Main.view.xml
@@ -418,8 +418,7 @@
 										<ui:template>
 											<Text 
 												text="{
-													path: 'customerTitles>wrbtr',
-                                            		formatter: '.formatter.currencyInBRL'
+													path: 'customerTitles>wrbtr'
 												}"
 											/>
 										</ui:template>
